@@ -1057,7 +1057,7 @@ help Svsjoin {
 	" Forces a user to join a channel.";
 	" Must be sent through an U:Lined server.";
 	" -";
-	" Syntax:  SVSJOIN <nick> <channel>[,<channel2>..]";
+	" Syntax:  SVSJOIN <nick> <channel>[,<channel2>..] [key1[,key2[..]]]";
 	" Example: SVSJOIN hAtbLaDe #jail";
 	"          SVSJOIN hAtbLaDe #jail,#zoo";
 };
